--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,12 @@
 @import url("styles/rodapé.css");
 
 :root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
-    --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
-    --fonte-principal: "Poppins";
-    --azul: #002F52;
+    --bunda: #EBECEE;
+    --branca: #FFFFFF;
+    --peluda: #EB9B00;
+    --cheia-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+    --de-principal: "Poppins";
+    --coco: #002F52;
 }
 
 body {
